fixed bug white space mobile view

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -2,4 +2,8 @@
     color: white;
     height: 45px;
     background-color: #343A40;
+    text-align: center;
+}
+.align {
+    text-align: center;
 }
