--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
 
 @media only screen and (max-width: 800px) {
   body {
-    overflow-x: hidden; width: 100vw;
+    overflow-x: hidden;
   }
 }
 
